@startuml

!theme plain

package model{

	class Leaf {
		value
		refs
	}

	class Ref {
		source : Leaf
		set value
		update()
	}

	Leaf *-- Ref

	class ArrayModel

	class Node {
		id
		tree
		name
		com
		parts
	}

	class Tree {
		root
	}

	Tree *-- Node
	Tree --o Node
	Node::parts *-- Nodes
	Nodes -|> ArrayModel
	Nodes *-- Node
}

package model.navi {

	class Index
	
	class Selector {
		root
		current
	}

	class Navi {
		url
		setUrl()
	}

	Selector *-- Index
	Selector --o Index
	Index *- Index
	Navi -|> Selector
}

package htdom {

	class Component {
		e
		es
		partsList
		refs
		createNode()
		createElement()
	}

	class Parts {
		keys
		createNode()
	}

	class Refs {
		leaf
		action
	}

	Component::refs *-- Refs
	Component::partsList *-- Parts
}
